--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "1nt3rst3ll4r Pr0xy",
   "version": "4.1.4",
   "description": "https://discord.gg/gointerstellar",
   "type": "module",
